fixed alignment

--- a/src/styles/componentStyles/header.module.scss
+++ b/src/styles/componentStyles/header.module.scss
@@ -155,6 +155,10 @@
           justify-content: center;
       }
 
+      .header{
+          justify-content: center;
+      }
+
       .name{
           display: none;
       }
