--- a/src/styles/templateStyles/blogPage.module.scss
+++ b/src/styles/templateStyles/blogPage.module.scss
@@ -78,7 +78,7 @@
 
 .recommended-wrapper{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 
